修改groupId为com.gitee.chentaoah。并添加maven中央仓库打包配置

--- a/spirit-output/spirit-output-java/pom.xml
+++ b/spirit-output/spirit-output-java/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.gitee.spirit</groupId>
+		<groupId>com.gitee.chentaoah</groupId>
 		<artifactId>spirit-output</artifactId>
 		<version>2.1.30</version>
 	</parent>
@@ -11,7 +11,7 @@
 	<dependencies>
 		<!-- spirit-core-compile -->
 		<dependency>
-			<groupId>com.gitee.spirit</groupId>
+			<groupId>com.gitee.chentaoah</groupId>
 			<artifactId>spirit-core-compile</artifactId>
 			<version>${project.version}</version>
 		</dependency>
