--- a/spirit-tools/spirit-code-tools/pom.xml
+++ b/spirit-tools/spirit-code-tools/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.gitee.spirit</groupId>
+		<groupId>com.gitee.chentaoah</groupId>
 		<artifactId>spirit-tools</artifactId>
 		<version>2.1.30</version>
 	</parent>
@@ -17,7 +17,7 @@
 		</dependency>
 		<!-- spirit-starter-java -->
 		<dependency>
-			<groupId>com.gitee.spirit</groupId>
+			<groupId>com.gitee.chentaoah</groupId>
 			<artifactId>spirit-starter-java</artifactId>
 			<version>${project.version}</version>
 		</dependency>
