--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@
 /spirit-output/spirit-output-java/target/classes/com/gitee/spirit/output/java/
 /spirit-starter/spirit-starter-java/target/classes/
 /spirit-stdlib/target/classes/com/gitee/spirit/stdlib/
+/.idea/uiDesigner.xml
