--- a/.gitignore
+++ b/.gitignore
@@ -129,13 +129,17 @@
 /spirit-stdlib/spirit-stdlib.iml
 /spirit-tools/spirit-tools.iml
 /.idea/vcs.xml
-/spirit-common/target/classes/com/gitee/spirit/common/
-/spirit-core/spirit-core-class/target/classes/com/gitee/spirit/core/
-/spirit-core/spirit-core-compile/target/classes/com/gitee/spirit/core/
-/spirit-core/spirit-core-element/target/
+/spirit-stdlib/target/
+/spirit-common/target/
 /spirit-core/spirit-core-lexer/target/
-/spirit-tools/spirit-maven-plugin/target/classes/com/gitee/spirit/maven/plugin/
-/spirit-output/spirit-output-java/target/classes/com/gitee/spirit/output/java/
-/spirit-starter/spirit-starter-java/target/classes/
-/spirit-stdlib/target/classes/com/gitee/spirit/stdlib/
+/spirit-core/spirit-core-element/target/
+/spirit-core/spirit-core-class/target/
+/spirit-core/spirit-core-compile/target/
+/spirit-output/spirit-output-java/target/
+/spirit-starter/spirit-starter-java/target/
+/spirit-tools/spirit-code-tools/target/
+/spirit-tools/spirit-maven-plugin/target/
+/spirit-example/spirit-example-common/target/
+/spirit-example/spirit-example-plugin/target/
 /.idea/uiDesigner.xml
+
