--- a/spirit-example/spirit-example-common/pom.xml
+++ b/spirit-example/spirit-example-common/pom.xml
@@ -27,5 +27,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>${lang3.version}</version>
 		</dependency>
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+		</dependency>
 	</dependencies>
 </project>
